<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/parent_constraint"
        app:layout_constraintStart_toStartOf="@id/parent_constraint"
        app:layout_constraintTop_toTopOf="@id/parent_constraint"
        tools:context=".MainActivity"
        >
        <ImageView
            android:id="@+id/image_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/header_image1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.8"
            android:contentDescription="@string/content_description1"
            />

        <TextView
            android:id="@+id/first_text_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exploring_book"
            android:textColor="@color/mainGrey"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@id/image_banner"
            app:layout_constraintStart_toStartOf="@id/image_banner"
            app:layout_constraintTop_toTopOf="@id/image_banner"
            app:layout_constraintBottom_toBottomOf="@id/image_banner"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.1"
            />

        <TextView
            android:id="@+id/second_text_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="65dp"
            android:text="@string/slogan"
            android:textColor="@color/mainGrey"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_text_banner"
            android:textAlignment="center"
            android:letterSpacing="0.1"
            android:fontFamily="sans-serif"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_us_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/services_constraint1"
        app:layout_constraintEnd_toEndOf="@id/parent_constraint"
        app:layout_constraintStart_toStartOf="@id/parent_constraint"
        app:layout_constraintTop_toBottomOf="@id/Banner"
        android:background="@color/offWhite"
        android:paddingVertical="24dp"
        android:paddingHorizontal="16dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_first_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/about_us_constraint"
            app:layout_constraintEnd_toEndOf="@id/about_us_constraint"
            app:layout_constraintTop_toTopOf="@id/about_us_constraint"
            android:layout_marginEnd="26dp"
            >
             <TextView
                 android:id="@+id/about"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/about"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:letterSpacing="0.1"
                 android:textAllCaps="true"  />

            <TextView
                android:id="@+id/us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/about"
                app:layout_constraintTop_toTopOf="@id/about"
                android:text="@string/us"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:layout_marginStart="8dp"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            app:srcCompat="@drawable/about2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/about_header"
            app:layout_constraintTop_toTopOf="@id/about_first_header"
            android:scaleType="centerCrop"
            android:layout_marginTop="56dp"
            android:background="@drawable/image_border"
            android:contentDescription="@string/content_description2"
            />

        <TextView
            android:id="@+id/about_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_image"
            app:layout_constraintStart_toStartOf="@id/about_image"
            android:text="@string/slogan2"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.1"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/about_header"
             app:layout_constraintStart_toStartOf="@id/about_header"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/description"
             android:textSize="14sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/black"
             android:layout_marginTop="8dp"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/services_constraint1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@id/parent_constraint"
            app:layout_constraintEnd_toEndOf="@id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@id/about_us_constraint"
            android:background="@color/primaryColor"
            android:paddingBottom="16dp"

            >
             <ImageView
                 android:id="@+id/book_ic"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 app:layout_constraintStart_toStartOf="@id/services_constraint1"
                 app:layout_constraintTop_toTopOf="@id/services_constraint1"
                 app:layout_constraintEnd_toEndOf="@id/services_constraint1"
                 android:src="@drawable/ic_book3"
                 android:layout_marginTop="36dp"
                 android:contentDescription="@string/content_description3"
                 />
            <TextView
                android:id="@+id/service1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/book_ic"
                app:layout_constraintTop_toBottomOf="@id/book_ic"
                app:layout_constraintEnd_toEndOf="@id/book_ic"
                android:text="@string/service1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/services_constraint2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@id/parent_constraint"
            app:layout_constraintEnd_toEndOf="@id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@id/services_constraint1"
            android:background="@color/mainGrey"
            android:paddingBottom="16dp"

            >
            <ImageView
                android:id="@+id/category_ic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="@id/services_constraint2"
                app:layout_constraintTop_toTopOf="@id/services_constraint2"
                app:layout_constraintEnd_toEndOf="@id/services_constraint2"
                android:src="@drawable/ic_category2"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/content_description4"
                />
            <TextView
                android:id="@+id/service2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/category_ic"
                app:layout_constraintTop_toBottomOf="@id/category_ic"
                app:layout_constraintEnd_toEndOf="@id/category_ic"
                android:text="@string/service2"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/services_constraint3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@id/parent_constraint"
            app:layout_constraintEnd_toEndOf="@id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@id/services_constraint2"
            android:background="@color/back_black"
            android:paddingBottom="16dp"

            >
            <ImageView
                android:id="@+id/star_ic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="@id/services_constraint3"
                app:layout_constraintTop_toTopOf="@id/services_constraint3"
                app:layout_constraintEnd_toEndOf="@id/services_constraint3"
                android:src="@drawable/ic_star2"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/content_description4"
                />
            <TextView
                android:id="@+id/service3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/star_ic"
                app:layout_constraintTop_toBottomOf="@id/star_ic"
                app:layout_constraintEnd_toEndOf="@id/star_ic"
                android:text="@string/service3"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_us_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/parent_constraint"
            app:layout_constraintEnd_toEndOf="@id/parent_constraint"
            app:layout_constraintStart_toStartOf="@id/parent_constraint"
            app:layout_constraintTop_toBottomOf="@id/services_constraint3"
            android:background="@color/offWhite"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact_us_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/contact_us_constraint"
                app:layout_constraintEnd_toEndOf="@id/contact_us_constraint"
                app:layout_constraintTop_toTopOf="@id/contact_us_constraint"
                android:layout_marginEnd="26dp"
                >
                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:letterSpacing="0.1"
                    android:textAllCaps="true"
                    />

                <TextView
                    android:id="@+id/us2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/contact"
                    app:layout_constraintTop_toTopOf="@id/contact"
                    android:text="@string/us"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    android:letterSpacing="0.1"
                    android:textAllCaps="true"
                    android:layout_marginStart="8dp"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/ic_locatoin"
                android:layout_width="60dp"
                android:layout_height="72dp"
                app:layout_constraintStart_toStartOf="@id/contact_us_constraint"
                app:layout_constraintTop_toTopOf="@id/contact_us_constraint"
                android:src="@mipmap/ic_location"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/content_description6"
                />
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ic_locatoin"
                app:layout_constraintTop_toTopOf="@id/ic_locatoin"
                app:layout_constraintBottom_toBottomOf="@id/ic_locatoin"
                android:text="@string/address"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                />
            <ImageView
                android:id="@+id/ic_post"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@id/contact_us_constraint"
                app:layout_constraintTop_toBottomOf="@id/ic_locatoin"
                android:src="@mipmap/ic_post"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/content_description7"
                />
            <TextView
                android:id="@+id/site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ic_post"
                app:layout_constraintTop_toTopOf="@id/ic_post"
                app:layout_constraintBottom_toBottomOf="@id/ic_post"
                android:text="@string/post"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginStart="16dp"
                />
            <TextView
                android:id="@+id/social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/ic_post"
                app:layout_constraintTop_toBottomOf="@id/ic_post"
                android:text="@string/social"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:layout_marginTop="24dp"
                />
            <TextView
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/social"
                app:layout_constraintTop_toTopOf="@id/social"
                android:text="@string/media"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:letterSpacing="0.1"
                android:textAllCaps="true"
                android:layout_marginStart="8dp"

                />
            <ImageView
                android:id="@+id/ic_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="@id/social"
                app:layout_constraintTop_toBottomOf="@id/social"
                android:src="@mipmap/ic_facebook"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded"
                android:contentDescription="@string/content_description8"
                />
 </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>
